att default data

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catálogo de Produtos</title>
-  <link rel="stylesheet" href="css/style.css"> <!-- Seu arquivo de estilos -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <div id="catalogo"></div>
 
   <div class="whatsapp-container">
-    <a href="https://wa.me/5553984591992?text=Olá, gostaria de entrar em contato!" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/5553999999999?text=Olá, gostaria de entrar em contato!" class="whatsapp-float" target="_blank">
       <img src="https://img.icons8.com/color/48/000000/whatsapp.png" alt="WhatsApp">
     </a>
     <span class="whatsapp-text">Entrar em contato</span>
